# de-capstone-packagings-Momodu-Ibrahim

./: README.md  pyproject.toml
omnicart_pipeline/: api_client.py  cli.py  config.py  data_analyzer.py  data_enricher.py  pipeline.py
tests/: test_api_client.py  test_config.py  test_data_analyzer.py  test_data_enricher.py
